[package]
name = "repoprompt"
version = "1.5.2"
edition = "2021"

[dependencies]
rust-embed = "8.6.0"
mime_guess = "2.0.5"
actix-web = { version = "4.10.2", features = ["rustls-0_23"] }
actix-cors = "0.7.1"
actix-files = "0.6.6"
ignore = "0.4.23"
notify = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "sync", "fs", "time"] }
log = "0.4.27"
env_logger = "0.11.8"
dotenv = "0.15.0"
natord = "1.0.9"
chrono = "0.4.40"
futures = "0.3.31"
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
actix-rt = "2.10.0"
tokio-stream = "0.1.17"
tree-sitter = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-cpp = "0.23.4"
path-clean = "1.0.1"
lazy_static = "1.5.0"
streaming-iterator = "0.1.9"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[build-dependencies]
cc="*"