[package]
name = "repoprompt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.10.2", features = ["rustls-0_23"] }
actix-cors = "0.7.1"
actix-files = "0.6.6"
ignore = "0.4.23"
notify = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
dotenv = "0.15.0"
alphanumeric-sort = "1.5.3"
chrono = "0.4.40"
futures = "0.3.31"
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
actix-rt = "2.10.0"
tokio-stream = "0.1.17"